--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,7 @@ pluggy==0.13.0
 protobuf==3.5.1
 py==1.8.0
 pycparser==2.19
+pygame==1.9.6
 PyInstaller==3.6
 pyixexplorer==1.0.7
 pyixnetwork==1.7.0
@@ -60,7 +61,7 @@ toml==0.10.0
 tox==3.14.0
 trex-stl-lib==0.4
 UnifiedTG==2.7.2
-urllib3==1.24.2
+urllib3==1.24.1
 virtualenv==16.7.7
 wcwidth==0.1.7
 zipp==0.6.0
